Fix front page on smaller screens
- Move media queries into page where queries apply
- Clean up media queries
- Fix navigation across pages

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -46,20 +46,20 @@
   }
 
   .personContainer {
-    margin: 2%;
     display: inline-block;
     text-align: center;
     vertical-align: top;
-    width: 29%;
+    width: 90%;
+    margin: 3% 5%;
 
-    @media screen and (max-width:900px) {
+    @media screen and (min-width:601px) and (max-width:900px) {
       width: 45.5%;
       margin: 2%;
     }
 
-    @media screen and (max-width:600px) {
-      width: 90%;
-      margin: 3% 5%;
+    @media screen and (min-width:901px) {
+      width: 29%;
+      margin: 2%;
     }
 
     img {
@@ -84,5 +84,13 @@
       font-size: 25px;
     }
 
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1090px) {
+    .main {
+      .aboutMain {
+        width: 100%;
+      }
+    }
   }
 }
